Updated the cartoons-api project

--- a/Cartoons.Api/appsettings.json
+++ b/Cartoons.Api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "CartoonStoreDBSettings": {
-    "CollectionName": "Cartoons",
+    "PublishedCollectionName": "Published",
+    "DraftsCollectionName": "Drafts",
     "DatabaseName": "CartoonStore",
     "ConnectionString": "mongodb://localhost:27017"
   },
