--- a/Cartoons.Api/appsettings.Development.json
+++ b/Cartoons.Api/appsettings.Development.json
@@ -1,7 +1,8 @@
 {
   "CartoonStoreDBSettings": {
-    "CollectionName": "Cartoons",
-    "DatabaseName": "CartoonDevStore",
+    "PublishedCollectionName": "Published",
+    "DraftsCollectionName": "Drafts",
+    "DatabaseName": "CartoonsDevStore",
     "ConnectionString": "mongodb://localhost:27017"
   },
   "Logging": {
